test_programs/compile_failure/noirc_frontend_tests_normal_generic_used_in_nested_array_length_fail/src/main.nr

    pub struct Foo<N> {
        a: Field,
        b: Bar<N>,
    }
    pub struct Bar<let N: u32> {
        inner: [Field; N]
    }
    